--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Glassmorphism Card CSS Generator is a small tool that helps you play with the Glassmorphism effect card in CSS and providing CSS code as well." />
    <meta name="keywords" content="Glassmorphism, Glassmorphism card, design, CSS, CSS generator, glassmorphism CSS, glasmorphism generator" />
-   <link rel="stylesheet" href="css/index.css">
+   <link rel="stylesheet" href="./css/index.css">
    <link rel="stylesheet" href="css/coloris.css" />
    <title>Glassmorphism Effect Card CSS Generator</title>
 </head>
