--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="keywords" content="Glassmorphism, Glassmorphism card, design, CSS, CSS generator, glassmorphism CSS, glasmorphism generator" />
    <link rel="stylesheet" href="./css/index.css">
    <link rel="stylesheet" href="css/coloris.css" />
-   <title>Glassmorphism Effect Card CSS Generator</title>
+   <title>Glassmorphism Effect Card CSS Snippet Generator</title>
 </head>
 <body>
    <h1>Glassmorphism CSS Generator </h1>
