--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
    <meta name="keywords" content="Glassmorphism, Glassmorphism card, design, CSS, CSS generator, glassmorphism CSS, glasmorphism generator" />
    <link rel="stylesheet" href="css/index.css">
    <link rel="stylesheet" href="css/coloris.css" />
+   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+   <link rel="manifest" href="/site.webmanifest">
    <title>Glassmorphism Effect Card CSS Snippet Generator</title>
 </head>
 <body>
